--- a/site/htdocs/avanty/style/theme/custom.css
+++ b/site/htdocs/avanty/style/theme/custom.css
@@ -210,10 +210,10 @@
 }
 
 .avanty .ui-tabs .ui-tabs-nav li a {
-	display: inline-block;
 	box-sizing: border-box;
 	width: 100%;
 	padding: 0.5em 0.5em;
+	overflow: hidden;
 }
 
 .avanty .ui-tabs .ui-tabs-nav li a img {
